--- a/shipping/pom.xml
+++ b/shipping/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.example</groupId>
-        <artifactId>orderdemo</artifactId>
+        <artifactId>axon-contract-testing-demo</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>shipping</artifactId>
